@@ -8,11 +8,11 @@ import net.minecraft.client.font.TextRenderer;
 import net.minecraft.client.gui.DrawContext;
 import net.minecraft.client.gui.tooltip.OrderedTextTooltipComponent;
 import net.minecraft.client.gui.tooltip.TooltipComponent;
-import net.minecraft.client.item.TooltipContext;
 import net.minecraft.client.network.ClientPlayerEntity;
-import net.minecraft.enchantment.EnchantmentHelper;
 import net.minecraft.item.Equipment;
+import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
+import net.minecraft.item.tooltip.TooltipType;
 import net.minecraft.text.Text;
 
 import java.util.LinkedList;
@@ -31,16 +31,16 @@ public class EquipmentCompareComponent extends StandaloneComponent {
         ClientPlayerEntity player = MinecraftClient.getInstance().player;
         assert player != null;
         this.equipped = player.getEquippedStack(equipment.getSlotType());
-        if (this.equipped.isEmpty() || ItemStack.canCombine(this.equipped, this.stack)) return;
-        for (Text text : this.equipped.getTooltip(player, TooltipContext.BASIC))
+        if (this.equipped.isEmpty() || ItemStack.areItemsAndComponentsEqual(this.equipped, this.stack)) return;
+        for (Text text : this.equipped.getTooltip(Item.TooltipContext.DEFAULT, player, TooltipType.BASIC))
             if (!TooltipReforgedConfig.INSTANCE.misc.removeEmptyLines.getValue() || !ExtendedTextVisitor.getText(text.asOrderedText()).getString().isEmpty())
                 this.components.add(new OrderedTextTooltipComponent(text.asOrderedText()));
-        if (!this.components.isEmpty()) this.components.remove(0);
+        if (!this.components.isEmpty()) this.components.removeFirst();
         List<TooltipComponent> headers = new LinkedList<>();
         headers.add(new OrderedTextTooltipComponent(Text.translatable("tooltip.tooltips_reforged.currently_equipped").asOrderedText()));
         headers.add(new HeaderComponent(this.equipped, null));
         if (this.equipped.getItem().isEnchantable(this.equipped))
-            headers.add(new EnchantmentsComponent(EnchantmentHelper.get(this.equipped)));
+            headers.add(new EnchantmentsComponent(this.equipped.getEnchantments()));
         this.components.addAll(0, headers);
         this.components.add(new DurabilityComponent(this.equipped));
     }
@@ -50,7 +50,7 @@ public class EquipmentCompareComponent extends StandaloneComponent {
         if (this.components.isEmpty()) return;
         TooltipsRenderHelper.ResolveResult result = TooltipsRenderHelper.resolveTooltips(textRenderer, this.components);
         if (result.pages().isEmpty()) return;
-        TooltipsRenderHelper.Page page = result.pages().get(0);
+        TooltipsRenderHelper.Page page = result.pages().getFirst();
         int height = page.getHeight();
         TooltipsRenderHelper.drawWithResult(result, this.equipped, context, textRenderer, x, y - height - 20);
     }
